Get rid of scroll gutter, fix dark mode icons.

--- a/site/src/ThemeSelector.css
+++ b/site/src/ThemeSelector.css
@@ -44,7 +44,7 @@ svg.icon-layers > path.secondary {
 
 .theme-selector-popover {
   max-height: 80vh;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 label.type-selector-checkbox {
